# any-task

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  devenv.nix  devenv.yaml  flake.nix  justfile  local.properties  sozu.toml
api/: openapi.yaml
api/openapi-2025-05-20/: README.md
api/openapi-2025-05-20/.openapi-generator/: FILES
api/openapi-2025-05-20/docs/: ApimodelPeriodAddObjectsToListRequest.md  ApimodelPeriodCheckboxPropertyLinkValue.md  ApimodelPeriodCreateChallengeResponse.md  ApimodelPeriodCreateObjectRequest.md  ApimodelPeriodCreatePropertyRequest.md  ApimodelPeriodCreateSpaceRequest.md  ApimodelPeriodCreateTagRequest.md  ApimodelPeriodEmailPropertyValue.md  ApimodelPeriodEmojiIcon.md  ApimodelPeriodFileIcon.md  ApimodelPeriodIconFormat.md  ApimodelPeriodMember.md  ApimodelPeriodMemberResponse.md  ApimodelPeriodNamedIcon.md  ApimodelPeriodNumberPropertyLinkValue.md  ApimodelPeriodNumberPropertyValue.md  ApimodelPeriodObject.md  ApimodelPeriodObjectWithBody.md  ApimodelPeriodObjectsPropertyValue.md  ApimodelPeriodPhonePropertyLinkValue.md  ApimodelPeriodPhonePropertyValue.md  ApimodelPeriodPropertyFormat.md  ApimodelPeriodPropertyLink.md  ApimodelPeriodPropertyResponse.md  ApimodelPeriodSearchRequest.md  ApimodelPeriodSelectPropertyLinkValue.md  ApimodelPeriodSelectPropertyValue.md  ApimodelPeriodSort.md  ApimodelPeriodSpace.md  ApimodelPeriodSpaceResponse.md  ApimodelPeriodTag.md  ApimodelPeriodTagResponse.md  ApimodelPeriodTemplateResponse.md  ApimodelPeriodTextPropertyLinkValue.md  ApimodelPeriodTextPropertyValue.md  ApimodelPeriodType.md  ApimodelPeriodUpdateObjectRequest.md  ApimodelPeriodUpdateSpaceRequest.md  ApimodelPeriodUrlPropertyLinkValue.md  ApimodelPeriodUrlPropertyValue.md  (+9 more)
apis/: openapi-2025-11-08.yaml
apis/2025-05-20/: openapi.yaml
apis/2025-05-20/openapi/: Cargo.toml  README.md
apis/2025-05-20/openapi/.openapi-generator/: FILES
apis/2025-05-20/openapi/docs/: ApimodelAddObjectsToListRequest.md  ApimodelCheckboxPropertyLinkValue.md  ApimodelCheckboxPropertyValue.md  ApimodelColor.md  ApimodelCreateApiKeyRequest.md  ApimodelCreateApiKeyResponse.md  ApimodelCreateChallengeRequest.md  ApimodelCreateChallengeResponse.md  ApimodelCreateObjectRequest.md  ApimodelCreatePropertyRequest.md  ApimodelCreateSpaceRequest.md  ApimodelCreateTagRequest.md  ApimodelCreateTypeRequest.md  ApimodelDatePropertyLinkValue.md  ApimodelDatePropertyValue.md  ApimodelEmailPropertyLinkValue.md  ApimodelEmailPropertyValue.md  ApimodelEmojiIcon.md  ApimodelFileIcon.md  ApimodelFilesPropertyLinkValue.md  ApimodelFilesPropertyValue.md  ApimodelFilter.md  ApimodelIcon.md  ApimodelIconFormat.md  ApimodelIconName.md  ApimodelMember.md  ApimodelMemberResponse.md  ApimodelMultiSelectPropertyLinkValue.md  ApimodelMultiSelectPropertyValue.md  ApimodelNamedIcon.md  ApimodelNumberPropertyLinkValue.md  ApimodelNumberPropertyValue.md  ApimodelObject.md  ApimodelObjectResponse.md  ApimodelObjectWithBody.md  ApimodelObjectsPropertyLinkValue.md  ApimodelObjectsPropertyValue.md  ApimodelPeriodCheckboxPropertyValue.md  ApimodelPeriodColor.md  ApimodelPeriodCreateApiKeyRequest.md  (+96 more)
apis/2025-05-20/openapi/src/apis/: auth_api.rs  configuration.rs  lists_api.rs  members_api.rs  objects_api.rs  properties_api.rs  search_api.rs  spaces_api.rs  tags_api.rs  templates_api.rs  types_api.rs
apis/2025-05-20/openapi/src/models/: apimodel_add_objects_to_list_request.rs  apimodel_checkbox_property_link_value.rs  apimodel_checkbox_property_value.rs  apimodel_color.rs  apimodel_create_api_key_request.rs  apimodel_create_api_key_response.rs  apimodel_create_challenge_request.rs  apimodel_create_challenge_response.rs  apimodel_create_object_request.rs  apimodel_create_property_request.rs  apimodel_create_space_request.rs  apimodel_create_tag_request.rs  apimodel_create_type_request.rs  apimodel_date_property_link_value.rs  apimodel_date_property_value.rs  apimodel_email_property_link_value.rs  apimodel_email_property_value.rs  apimodel_emoji_icon.rs  apimodel_file_icon.rs  apimodel_files_property_link_value.rs  apimodel_files_property_value.rs  apimodel_filter.rs  apimodel_icon.rs  apimodel_icon_format.rs  apimodel_icon_name.rs  apimodel_member.rs  apimodel_member_response.rs  apimodel_multi_select_property_link_value.rs  apimodel_multi_select_property_value.rs  apimodel_named_icon.rs  apimodel_number_property_link_value.rs  apimodel_number_property_value.rs  apimodel_object.rs  apimodel_object_response.rs  apimodel_object_with_body.rs  apimodel_objects_property_link_value.rs  apimodel_objects_property_value.rs  apimodel_period_color.rs  apimodel_period_create_api_key_response.rs  apimodel_period_create_challenge_request.rs  (+94 more)
apis/openapi-2025-11-08/: Cargo.toml  README.md
apis/openapi-2025-11-08/.openapi-generator/: FILES
apis/openapi-2025-11-08/docs/: AddObjectsToListRequest.md  AuthApi.md  CheckboxFilterItem.md  CheckboxPropertyLinkValue.md  CheckboxPropertyValue.md  Color.md  CreateApiKeyRequest.md  CreateApiKeyResponse.md  CreateChallengeRequest.md  CreateChallengeResponse.md  CreateObjectRequest.md  CreatePropertyRequest.md  CreateSpaceRequest.md  CreateTagRequest.md  CreateTypeRequest.md  DateFilterItem.md  DatePropertyLinkValue.md  DatePropertyValue.md  EmailFilterItem.md  EmailPropertyLinkValue.md  EmailPropertyValue.md  EmojiIcon.md  EmptyFilterItem.md  FileIcon.md  FilesFilterItem.md  FilesPropertyLinkValue.md  FilesPropertyValue.md  (+83 more)
assets/: dx-components-theme.css  main.css
assets/styling/: main.css  style.css  theme.css
src/: main.rs  proxy.rs
src/components/: actions.rs  add_properties.rs  api_client.rs  checkbox_property.rs  choose_view.rs  date_property.rs  edit_properties.rs  edit_view.rs  error.rs  hooks.rs  list_entry.rs  list_object.rs  mod.rs  object_row.rs  properties_row.rs  property.rs  search.rs  select_property.rs  task.rs  text_property.rs  title.rs  view_properties.rs
src/helpers/: api_client.rs  hooks.rs  mod.rs  models.rs
src/views/: actions.rs  api_client.rs  error.rs  home.rs  hooks.rs  list.rs  login.rs  mod.rs  search.rs  space.rs  task.rs  token.rs
(+220 files in other folders)
