[package]
name = "any-task"
version = "0.0.1"
authors = ["Tumypmyp"]
edition = "2024"
license = "Apache-2.0"


[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-liveview = { version = "0.7.1", default-features = false }
dioxus-desktop = { version = "0.7.1" }
dioxus-sdk-storage = { version = "0.7.0" }

serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
openapi = { path = "apis/2025-05-20/openapi" }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", branch = "main" }
dirs = "6.0.0"
serde_json = "1.0.143"
once_cell = "1.21.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
time = { version = "0.3.44", features = ["local-offset"] }
reqwest = { version = "0.12.22", features = ["json"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build]
target-dir = "target"
output-dir = "target"
