[package]
name = "any-task"
version = "0.0.4"
authors = ["Tumypmyp"]
edition = "2024"
license = "Apache-2.0"


[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
dioxus-liveview = { version = "0.7.2", default-features = false }
dioxus-desktop = { version = "0.7.2" }
dioxus-sdk-storage = { version = "0.7" }

serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
openapi = { path = "apis/2025-05-20/openapi" }
dirs = "6.0.0"
serde_json = "1.0.143"
once_cell = "1.21.3"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", branch = "main", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
time = { version = "0.3.44", features = ["local-offset"] }
reqwest = { version = "0.12.22", features = ["json"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
hyper-util = { version = "0.1.18", features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"


[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build]
target-dir = "target"
output-dir = "target"
