[package]
name = "openapi"
version = "1.0.0"
authors = ["support@anytype.io"]
description = "This API enables seamless interaction with Anytype's resources - spaces, objects, properties, types, templates, and beyond."
license = "Any Source Available License 1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
